// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> render with type and message 1`] = `
<div
  class="alertMes"
>
  success
</div>
`;

exports[`<Alert /> render with type and message 2`] = `
<div
  class="alertMes"
>
  info
</div>
`;

exports[`<Alert /> render with type and message 3`] = `
<div
  class="alertMes"
>
  error
</div>
`;

exports[`<Alert /> render with type and message 4`] = `
<div
  class="alertMes"
>
  warning
</div>
`;

exports[`<Alert /> should render default 1`] = `
<div>
  <div
    class="alert info"
    style="opacity: 1;"
  >
    <div
      class="alertMes"
    />
    hello world
  </div>
</div>
`;
